--- a/ext/manifest.json
+++ b/ext/manifest.json
@@ -18,5 +18,6 @@
   },
   "permissions": [
     "tabs"
-  ]
+  ],
+  "content_security_policy": "script-src 'self' https://ssl.google-analytics.com; object-src 'self'"
 }
