Add womens alternatives

--- a/ext/data/mappings.json
+++ b/ext/data/mappings.json
@@ -397,6 +397,71 @@
       "name": "Inspirado "
     }]
   },
+  "womens_clothing": {
+    "sources": [],
+    "alternatives": [
+      { "url": "https://www.aleapofstyle.com/", "name": "A Leap of Style"},
+      { "url": "http://asikereafana.com/", "name": "Asikere Afana"},
+      { "url": "http://www.arryles.com/", "name": "Ar'ryles"},
+      { "url": "http://bantuwax.com/", "name": "Bantu Wax"},
+      { "url": "https://www.bestowelan.com/", "name": "Bestow Elan"},
+      { "url": "http://blkkangaroo.com/pages/home", "name": "Blkkangaroo"},
+      { "url": "http://botilam.com/", "name": "Bot I Lam"},
+      { "url": "http://www.chelseabravo.com/#001", "name": "Chelsea Bravo"},
+      { "url": "http://www.violetflower.boutique/", "name": "Violet Flower"},
+      { "url": "https://www.azedejean-pierre.com/home/", "name": "Azede Jean Pierre"},
+      { "url": "http://www.byronlarsbeautymark.com", "name": "Byron Lars"},
+      { "url": "http://www.cdmjessicalynn.com/", "name": "Casa de Moda"},
+      { "url": "http://www.christiebrownonline.com", "name": "Christie Brown"},
+      { "url": "http://publicschoolnyc.com/", "name": "Public School"},
+      { "url": "http://www.shopcourtneynoelle.com/", "name": "Courtney Noelle"},
+      { "url": "http://www.dpipertwins.com/", "name": "D Piper Twins"},
+      { "url": "http://dearnaturalista.com/", "name": "Dear Naturalista"},
+      { "url": "https://www.etsy.com/shop/DemestiksNewYork?ref=l2-shopheader-name", "name": "Demestiks"},
+      { "url": "http://www.disclothesure.com/", "name": "Disclothesure"},
+      { "url": "https://www.diyanu.com/", "name": "Diyanu"},
+      { "url": "http://www.domstreater.com/", "name": "Dom Streater"},
+      { "url": "https://www.dopeciety.com/", "name": "Dopeciety"},
+      { "url": "http://www.duroolowu.com/", "name": "Duro Olowu"},
+      { "url": "http://www.glossrags.com/", "name": "Gloss Rags"},
+      { "url": "http://www.bcb3.org", "name": "BCB3"},
+      { "url": "http://www.grass-fields.com/", "name": "Grass Fields"},
+      { "url": "http://simplycecily.com/collections/all-clothing", "name": "Simply Cecily"},
+      { "url": "http://www.ifescloset.com/", "name": "Ife's Closet"},
+      { "url": "http://www.store.junkprints.com/", "name": "Junkprints"},
+      { "url": "http://www.kaelakay.com/", "name": "Kaela Kay"},
+      { "url": "http://kibonenny.com/", "name": "Kibonen NY"},
+      { "url": "http://www.kimberlygoldson.com/", "name": "Kimberly Goldson"},
+      { "url": "http://www.martinesdream.com/", "name": "Martine's Dream"},
+      { "url": "http://loft324.com/", "name": "Loft324"},
+      { "url": "http://www.mimiplange.com", "name": "Mimi Plange"},
+      { "url": "https://www.etsy.com/shop/missbeidafashion", "name": "Miss Beida Fashion"},
+      { "url": "https://monifc.com", "name": "Monif C"},
+      { "url": "https://www.nakimuli.com", "name": "Nakimuli"},
+      { "url": "https://natttaylor.com", "name": "Natt Taylor"},
+      { "url": "https://www.nubianskin.com", "name": "Nubian Skin"},
+      { "url": "https://zuvaa.com", "name": "Zuvaa"},
+      { "url": "http://www.whitneymero.com", "name": "Onion Cut and Sewn"},
+      { "url": "http://www.onyiiandco.com", "name": "Onyii & Co"},
+      { "url": "http://prodigaldaughter.com.au", "name": "Prodigal Daughter"},
+      { "url": "http://royal-jelly-harlem.myshopify.com", "name": "Royal Jelly Harlem"},
+      { "url": "https://rue107.com", "name": "Rue 107"},
+      { "url": "http://www.sheerchemistry.com", "name": "Sheer Chemistry"},
+      { "url": "http://www.sindisokhumalo.com", "name": "Sindiso Khumalo"},
+      { "url": "http://suakokobetty.bigcartel.com", "name": "Suakoko Betty"},
+      { "url": "http://tabiijust.com", "name": "Tabii Just"},
+      { "url": "http://www.taylorjaycollection.com/", "name": "Taylor Jay Collection"},
+      { "url": "http://www.tiffanyamberng.com", "name": "Tiffany Amber"},
+      { "url": "http://www.poquapoqu.com", "name": "Poqua Poku"},
+      { "url": "http://www.tracyreese.com", "name": "Tracy Reese"},
+      { "url": "http://tsemayebinitie.com", "name": "Tsemaye Bintie"},
+      { "url": "http://www.virgoslounge.com", "name": "Virgos Lounge"},
+      { "url": "http://yetundesarumi.com/", "name": "Yetunde Sarumi"},
+      { "url": "https://www.ennyluap.com", "name": "Ennyluap"},
+      { "url": "https://ohemaohene.com", "name": "Ohema Ohene"},
+      { "url": "https://yatirclothing.com/collections/all", "name": "Yatir Clothing"}
+    ]
+  },
   "household_cleaning_products": {
     "sources": [],
     "alternatives": [{
