--- a/ext/manifest.json
+++ b/ext/manifest.json
@@ -1,18 +1,18 @@
 {
-  "name": "CHANGE THIS : Extension boilerplate",
+  "name": "BuyBlack",
   "version": "0.0.1",
   "manifest_version": 2,
-  "description": "This extension was created with the awesome extensionizr.com",
-  "homepage_url": "http://extensionizr.com",
+  "description": "This extension suggests black-owned businesses you didn't know about!",
+  "homepage_url": "http://buyblack.io",
   "icons": {
-    "16": "icons/icon16.png",
-    "48": "icons/icon48.png",
-    "128": "icons/icon128.png"
+    "16": "icons/BuyBlack_Chrome_Toolbox_Icon16.png",
+    "48": "icons/BuyBlack_Chrome_Toolbox_Icon48.png",
+    "128": "icons/BuyBlack_Chrome_Toolbox_Icon128.png"
   },
   "default_locale": "en",
   "options_page": "src/options/index.html",
   "browser_action": {
-    "default_icon": "icons/icon19.png",
+    "default_icon": "icons/BuyBlack_Chrome_Toolbox_Icon16.png",
     "default_title": "browser action demo",
     "default_popup": "src/browser_action/browser_action.html"
   },
