Add travel sources

--- a/ext/data/mappings.json
+++ b/ext/data/mappings.json
@@ -643,7 +643,9 @@
     }]
   },
   "travel": {
-    "sources": [],
+    "sources": [
+      "http://www.aribnb.com"
+    ],
     "alternatives": []
   },
   "financial_media": {
