Add financial media sources

--- a/ext/data/mappings.json
+++ b/ext/data/mappings.json
@@ -649,7 +649,10 @@
     "alternatives": []
   },
   "financial_media": {
-    "sources": [],
+    "sources": [
+      "http://www.wsj.com",
+      "http://www.money.com"
+    ],
     "alternatives": [{
       "url": "http://www.financialjuneteenth.com",
       "name": "Financial Junteenth"
