--- a/ext/manifest.json
+++ b/ext/manifest.json
@@ -17,7 +17,10 @@
     "default_popup": "src/browser_action/browser_action.html"
   },
   "permissions": [
+    "https://www.google-analytics.com/",
+    "storage",
     "tabs"
   ],
+  
   "content_security_policy": "script-src 'self' https://ssl.google-analytics.com; object-src 'self'"
 }
