--- a/ext/data/mappings.json
+++ b/ext/data/mappings.json
@@ -1,8 +1,9 @@
+#correctFile
+
 {
   "health_beauty": {
     "sources": [
       "http://www.sephora.com",
-      "http://www.blackopalbeauty.com/",
       "http://www.ulta.com",
       "http://www.maccosmetics.com",
       "http://www.thebodyshop-usa.com",
@@ -203,6 +204,9 @@
       "url": "http://www.magnoliamakeup.com/",
       "name": "Magnolia Makeup"
     }, {
+      "url": "http://www.blackopalbeauty.com/",
+      "name": "Black Opal"
+    }, {
       "url": "http://missjessies.com/",
       "name": "Miss Jessies"
     }, {
@@ -220,27 +224,6 @@
     }, {
       "url": "http://www.dapperblackbox.com/",
       "name": "Dapper Black Box"
-    }, {
-      "url": "http://www.koilsbynature.com/",
-      "name": "Koils By Nature"
-    }, {
-      "url": "http://www.hydrathermanaturals.com/",
-      "name": "Hydra Therma Naturals"
-    }, {
-      "url": "https://www.camillerosenaturals.com/",
-      "name": "Camille Rose Naturals"
-    }, {
-      "url": "http://madininakiss.com/",
-      "name": "Madinina Kiss"
-    }, {
-      "url": "http://inahsi.com/",
-      "name" "Inahsi"
-    }, {
-      "url": "http://lusciouslathers.com/",
-      "name": "Luscious Lathers"
-    }, {
-      "url": "http://www.simplyallnatural.us/",
-      "name": "Simply All Natural"
     }]
   },
   "accessories": {
@@ -432,9 +415,6 @@
     }, {
       "url": "http://www.essencemurjani.com/",
       "name": "Essence Murjani Jewelry"
-    }, {
-      "url": "https://textilesandalchemy.com/",
-      "name": "Textiles and Alchemy"
     }]
   },
   "home_goods": {
@@ -443,19 +423,17 @@
       "http://www.worldmarket.com",
       "http://www.kohls.com",
       "http://www.wayfair.com",
-      "http://www.target.com",
-      "https://www.fathead.com/",
-      "https://www.muralsyourway.com/"
+      "http://www.target.com"
       ],
     "alternatives": [{
-      "url": "http://www.thevintagevogue.com/",
+      "url": "http://www.thevintagevogue.com/shop/",
       "name": "The Vintage Vogue"
-    }, {
-      "url": "http://anitaveetextile.com/",
-      "name": "Anitavees Home Decor"
     }, {
       "url": "http://ladydyeyarns.com/",
       "name": "Lady Dye Yarns "
+    }, {
+      "url": "http://inspirado.co/",
+      "name": "Inspirado "
     }, {
       "url": "https://www.etsy.com/shop/AllyElleCards",
       "name": "Ally Elle Cards"
@@ -510,9 +488,6 @@
     }, {
       "url": "http://inspirado.co",
       "name": "Inspirado "
-    }, {
-      "url": "https://wemontage.com/",
-      "name" "We Montage"
     }]
   },
   "womens_clothing": {
@@ -724,6 +699,7 @@
       "http://www.nancymeyer.com",
       "http://www.adoreme.com/bras-and-panties.html",
       "https://www.soma.com/store/"
+      
     ],
     "alternatives": [{
       "url": "https://www.spreesy.com/AVIDSWIM",
@@ -758,15 +734,6 @@
     }, {
       "url": "http://www.thenewsuzy.com",
       "name": "Suzy Black"
-    }, {
-      "url": "http://www.bijte.com/",
-      "name": "bijte"
-    }, {
-      "url": "https://urbanintimates.com",
-      "name": "Urban Intimates"
-    }, {
-      "url": "http://just-my-jammies.myshopify.com/",
-      "name": "Just my Jammies"
     }]
   },
   "athletic_wear": {
@@ -775,12 +742,7 @@
       "http://www.reebok.com",
       "http://www.adidas.com/us/",
       "http://shop.lululemon.com",
-      "https://www.underarmour.com/en-us/",
-      "https://www.manduka.com/",
-      "http://jadeyoga.com/",
-      "http://www.gaiam.com/",
-      "http://yogamats.com/",
-      "https://www.yogaoutlet.com/"
+      "https://www.underarmour.com/en-us/"
     ],
     "alternatives": [{
       "url": "http://blackgirlsrun.com/collections/all",
@@ -788,9 +750,6 @@
     }, { 
       "url": "https://elevenbyvenuswilliams.com/", 
       "name": "Eleven By Venus Williams"
-    }, {
-      "url": "http://affirmats.com/",
-      "name": "Affirmats Yoga Mats"
     }]
   },
   "shoes": {
@@ -804,7 +763,7 @@
     "alternatives": [{
       "url": "http://armando-cabral.com/",
       "name": "Armando Cabral"
-    }, {
+    },{
       "url": "http://www.oneunited.com/",
       "name": "One United"
     }, {
@@ -880,23 +839,8 @@
       "http://www.airbnb.com"
     ],
     "alternatives": [{
-      "url": "https://innclusive.com/",
-      "name" "Innclusive"
-    }, {
-      "url": "http://www.africanamericaninns.com/inns.html",
-      "name": "African American Inns"
-    }, {
-      "url": "http://www.nomadnesstv.com",
-      "name" "Nomadness Travel Tribe"
-    }, {
-      "url": "http://www.upintheairlife.com/",
-      "name": "Up in the Air Life"
-    }, {
-      "url": "http://bucketlistbeasts.com/bucket-list-beasts/",
-      "name": "Bucket List Beasts"
-    }, {
-      "url": "http://travelnoire.com/",
-      "name": "Travel Noire"
+      "url": "http://www.Innclusive.com",
+      "name": "Innclusive"
     }]
   },
   "financial_media": {
@@ -980,7 +924,7 @@
       "url": "http://www.loadebar.com/www",
       "name": "Loadebar"
     }, {
-      "url":"http://www.goodpeoplepopcorn.com/",
+      "url": "http://www.goodpeoplepopcorn.com/",
       "name": "Good People Popcorn"
     }]
   },
@@ -1124,4 +1068,5 @@
       "name": "Scotch & Porter"
     }]
   }
+
 }
